; ModuleID = '/home/carl/AnghaBench/lede/package/kernel/gpio-button-hotplug/src/extr_gpio-button-hotplug.c_gpio_button_get_value.c'
source_filename = "/home/carl/AnghaBench/lede/package/kernel/gpio-button-hotplug/src/extr_gpio-button-hotplug.c_gpio_button_get_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_keys_button_data = type { %struct.TYPE_2__*, i64 }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpio_keys_button_data*)* @gpio_button_get_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gpio_button_get_value(%struct.gpio_keys_button_data* %0) #0 {
  %2 = alloca %struct.gpio_keys_button_data*, align 8
  %3 = alloca i32, align 4
  store %struct.gpio_keys_button_data* %0, %struct.gpio_keys_button_data** %2, align 8
  %4 = load %struct.gpio_keys_button_data*, %struct.gpio_keys_button_data** %2, align 8
  %5 = getelementptr inbounds %struct.gpio_keys_button_data, %struct.gpio_keys_button_data* %4, i32 0, i32 1
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %19

8:                                                ; preds = %1
  %9 = load %struct.gpio_keys_button_data*, %struct.gpio_keys_button_data** %2, align 8
  %10 = getelementptr inbounds %struct.gpio_keys_button_data, %struct.gpio_keys_button_data* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @gpio_get_value_cansleep(i32 %13)
  %15 = icmp ne i32 %14, 0
  %16 = xor i1 %15, true
  %17 = xor i1 %16, true
  %18 = zext i1 %17 to i32
  store i32 %18, i32* %3, align 4
  br label %30

19:                                               ; preds = %1
  %20 = load %struct.gpio_keys_button_data*, %struct.gpio_keys_button_data** %2, align 8
  %21 = getelementptr inbounds %struct.gpio_keys_button_data, %struct.gpio_keys_button_data* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @gpio_get_value(i32 %24)
  %26 = icmp ne i32 %25, 0
  %27 = xor i1 %26, true
  %28 = xor i1 %27, true
  %29 = zext i1 %28 to i32
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %19, %8
  %31 = load i32, i32* %3, align 4
  %32 = load %struct.gpio_keys_button_data*, %struct.gpio_keys_button_data** %2, align 8
  %33 = getelementptr inbounds %struct.gpio_keys_button_data, %struct.gpio_keys_button_data* %32, i32 0, i32 0
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = xor i32 %31, %36
  ret i32 %37
}

declare dso_local i32 @gpio_get_value_cansleep(i32) #1

declare dso_local i32 @gpio_get_value(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
